Disable Rubocop's `casecmp` preference
Rubocop wants us to use

```
c[k].to_s.casecmp(v.to_s).zero?
```

instead of

```
c[k].to_s.downcase == v.to_s.downcase
```

That's largely a micro-optimisation, and I'd prefer to stick with the
more legible version instead. So disable this check, (as we have also
done in other repos).

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -51,5 +51,7 @@ Metrics/CyclomaticComplexity:
 Metrics/PerceivedComplexity:
   Max: 8
 
-
+Performance/Casecmp:
+  Enabled: false
+    
 inherit_from: .rubocop_todo.yml
