--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,57 +1,8 @@
-AllCops:
-  TargetRubyVersion: 2.0
+inherit_from:
+  - https://raw.githubusercontent.com/everypolitician/everypolitician-data/master/.rubocop_base.yml
+  - .rubocop_todo.yml
 
-Style/AlignHash:
-  EnforcedHashRocketStyle: table
-  EnforcedColonStyle: table
-
-Style/ClassAndModuleCamelCase:
-  Enabled: false
-
-Style/CollectionMethods:
-  Enabled: true
-
-Style/Documentation:
-  Enabled: false
-
-Style/FormatString:
-  EnforcedStyle: percent
-
-Style/HashSyntax:
-  EnforcedStyle: ruby19_no_mixed_keys
-
-Style/RescueModifier:
-  Enabled: false
-
-Style/SignalException:
-  Enabled: false
-
-Style/SymbolArray:
-  Enabled: true
-
-Style/TrailingCommaInLiteral:
-  EnforcedStyleForMultiline: consistent_comma
-
-
-Metrics/ClassLength:
-  Max: 250
-
-Metrics/MethodLength:
-  Max: 20
-
-Metrics/LineLength:
-  Max: 150
-
-Metrics/AbcSize:
-  Max: 50
-
-Metrics/CyclomaticComplexity:
-  Max: 7
-
-Metrics/PerceivedComplexity:
-  Max: 8
-
-Performance/Casecmp:
-  Enabled: false
-    
-inherit_from: .rubocop_todo.yml
+# We're OK with a class of EveryPolitician
+Style/ConstantName:
+  Exclude:
+    - 'lib/everypolitician.rb'
