Don't use safe operator
This was only introduced in ruby 2.3, and we want to work for earlier versions

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,13 @@ inherit_from:
   - https://raw.githubusercontent.com/everypolitician/everypolitician-data/master/.rubocop_base.yml
   - .rubocop_todo.yml
 
+AllCops:
+  TargetRubyVersion: 2.3.3
+
 # We're OK with a class of EveryPolitician
 Style/ConstantName:
   Exclude:
     - 'lib/everypolitician.rb'
+
+Style/SafeNavigation:
+  Enabled: false
