--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: ruby
 cache: bundler
 sudo: false
 rvm:
-  - 2.1.7
-  - 2.2.3
-  - 2.3.1
-before_install: gem install bundler -v 1.10.6
+  - 2.3.7
+  - 2.4.4
+  - 2.5.1
+  - 2.6.0-preview2
+before_install: gem install bundler -v 1.16.6
